--- a/dev/how_to/mult_vis_in_fig/index.html
+++ b/dev/how_to/mult_vis_in_fig/index.html
@@ -20,7 +20,7 @@ plot_erp!(f[1, 2], effects(Dict(:condition =&gt; [&quot;car&quot;, &quot;face&qu
     mapping=(; color=:condition))
 plot_butterfly!(f[2, 1:2], d_topo; positions=positions)
 
-f</code></pre><img src="81fa2e05.png" alt="Example block output"/><p>Using the data from the tutorials, we can create a large image with any type of plot.</p><p>With so many plots at once, it&#39;s tempting to set a fixed resolution in your image to order the plots evenly (code below).</p><pre><code class="language-julia hljs">f = Figure(resolution=(2000, 2000))
+f</code></pre><img src="718c06fa.png" alt="Example block output"/><p>Using the data from the tutorials, we can create a large image with any type of plot.</p><p>With so many plots at once, it&#39;s tempting to set a fixed resolution in your image to order the plots evenly (code below).</p><pre><code class="language-julia hljs">f = Figure(resolution=(2000, 2000))
 
 plot_butterfly!(f[1, 1:3], d_topo; positions=positions)
 
@@ -56,4 +56,66 @@ plot_erpimage!(f[1, 4:5], times, dat_e; sortvalues=evts.Δlatency)
 plot_circulareegtopoplot!(f[3:4, 4:5], d_topo[in.(d_topo.time, Ref(-0.3:0.1:0.5)), :];
     positions=positions, predictor=:time, predictor_bounds=[-0.3, 0.5])
 
-f</code></pre><img src="676d6973.png" alt="Example block output"/></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../hide_deco/">« Hide Axis Spines and Decorations</a><a class="docs-footer-nextpage" href="../show_oob_labels/">Designmatrix: Show out of Bounds Label »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.1 on <span class="colophon-date" title="Thursday 14 December 2023 16:42">Thursday 14 December 2023</span>. Using Julia version 1.9.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+f</code></pre><img src="65a21df3.png" alt="Example block output"/><pre><code class="language-julia hljs">f = Figure(resolution=(1200, 1400))
+ga = f[1, 1]
+gc = f[2, 1]
+ge = f[3, 1]
+gg = f[4, 1]
+gb = f[1, 2]
+gd = f[2, 2]
+gf = f[3, 2]
+gh = f[4, 2]
+
+d_topo, pos = example_data(&quot;TopoPlots.jl&quot;)
+uf = example_data(&quot;UnfoldLinearModel&quot;)
+results = coeftable(uf)
+uf_5chan = example_data(&quot;UnfoldLinearModelMultiChannel&quot;)
+d_singletrial, _ = UnfoldSim.predef_eeg(; return_epoched=true)
+times = -0.099609375:0.001953125:1.0
+data, positions = TopoPlots.example_data()
+df = UnfoldMakie.eeg_matrix_to_dataframe(data[:,:,1], string.(1:length(positions)));
+raw_ch_names = [&quot;FP1&quot;, &quot;F3&quot;, &quot;F7&quot;, &quot;FC3&quot;, &quot;C3&quot;, &quot;C5&quot;, &quot;P3&quot;, &quot;P7&quot;, &quot;P9&quot;, &quot;PO7&quot;,
+&quot;PO3&quot;, &quot;O1&quot;, &quot;Oz&quot;, &quot;Pz&quot;, &quot;CPz&quot;, &quot;FP2&quot;, &quot;Fz&quot;, &quot;F4&quot;, &quot;F8&quot;, &quot;FC4&quot;, &quot;FCz&quot;, &quot;Cz&quot;,
+&quot;C4&quot;, &quot;C6&quot;, &quot;P4&quot;, &quot;P8&quot;, &quot;P10&quot;, &quot;PO8&quot;, &quot;PO4&quot;, &quot;O2&quot;]
+
+m = example_data(&quot;UnfoldLinearModel&quot;)
+results = coeftable(m)
+res_effects = effects(Dict(:continuous =&gt; -5:0.5:5), m);
+
+plot_erp!(ga, results; :stderror=&gt;true)
+plot_butterfly!(gb, d_topo; positions=pos,
+    topomarkersize = 10, topoheigth = 0.4, topowidth = 0.4,)
+    hlines!(0, color = :gray, linewidth = 1)
+    vlines!(0, color = :gray, linewidth = 1)
+plot_topoplot!(gc, data[:,340,1]; positions = positions)
+plot_topoplotseries!(gd, df, 80; positions=positions, visual=(label_scatter=false,),
+    layout = (; use_colorbar=true))
+plot_erpgrid!(ge, data[:, :, 1], positions)
+
+dat_e, evts, times = example_data(&quot;sort_data&quot;)
+plot_erpimage!(gf, times, dat_e; sortvalues=evts.Δlatency)
+plot_channelimage!(gg, data[:, :, 1], positions[1:30], raw_ch_names; )
+
+r1, positions = example_data();
+r2 = deepcopy(r1)
+r2.coefname .= &quot;B&quot; # create a second category
+r2.estimate .+= rand(length(r2.estimate))*0.1
+results_plot = vcat(r1, r2);
+plot_parallelcoordinates(
+    gh,
+    subset(results_plot, :channel =&gt; x -&gt; x .&lt; 8, :time =&gt; x -&gt; x .&lt; 0);
+    mapping = (; color = :coefname),
+    normalize = :minmax, ax_labels = [&quot;FP1&quot;, &quot;F3&quot;, &quot;F7&quot;, &quot;FC3&quot;, &quot;C3&quot;, &quot;C5&quot;, &quot;P3&quot;, &quot;P7&quot;]
+)
+
+
+for (label, layout) in zip([&quot;A&quot;, &quot;B&quot;, &quot;C&quot;, &quot;D&quot;, &quot;E&quot;, &quot;F&quot;, &quot;G&quot;, &quot;H&quot;], [ga, gb, gc, gd, ge, gf, gg, gh])
+    Label(layout[1, 1, TopLeft()], label,
+        fontsize=26,
+        font=:bold,
+        padding=(0, 5, 5, 0),
+        halign=:right)
+end
+f
+save(&quot;./complex_plot.png&quot;, f)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">CairoMakie.Screen{IMAGE}
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../hide_deco/">« Hide Axis Spines and Decorations</a><a class="docs-footer-nextpage" href="../show_oob_labels/">Designmatrix: Show out of Bounds Label »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.1 on <span class="colophon-date" title="Tuesday 19 December 2023 12:41">Tuesday 19 December 2023</span>. Using Julia version 1.9.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
