--- a/dev/how_to/mult_vis_in_fig/index.html
+++ b/dev/how_to/mult_vis_in_fig/index.html
@@ -12,7 +12,8 @@ uf = example_data(&quot;UnfoldLinearModel&quot;)
 results = coeftable(uf)
 uf_5chan = example_data(&quot;UnfoldLinearModelMultiChannel&quot;)
 data, positions = TopoPlots.example_data()
-dat_e, evts, times = example_data(&quot;sort_data&quot;)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">┌ Warning: Autocorrelation was NOT taken into account. Therefore SE are UNRELIABLE. Use at your own discretion
+dat_e, evts, times = example_data(&quot;sort_data&quot;)
+d_singletrial, _ = UnfoldSim.predef_eeg(; return_epoched = true)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">┌ Warning: Autocorrelation was NOT taken into account. Therefore SE are UNRELIABLE. Use at your own discretion
 └ @ Unfold ~/.julia/packages/Unfold/3KeNp/src/solver.jl:75
 (1, 1, 2000)</code></pre><p>This section discusses how users can incorporate multiple plots into a single figure.</p><p>By using the !-version of the plotting function and inserting a grid position instead of an entire figure, we can create multiple coordinated views.</p><p>We will start by creating a figure with Makie.Figure. </p><p><code>f = Figure()</code></p><p>Now any plot can be added to <code>f</code> by placing a grid position, such as <code>f[1, 1]</code>.</p><pre><code class="language-julia hljs">f = Figure()
 plot_erp!(f[1, 1], coeftable(uf_deconv))
@@ -20,43 +21,65 @@ plot_erp!(f[1, 2], effects(Dict(:condition =&gt; [&quot;car&quot;, &quot;face&qu
     mapping=(; color=:condition))
 plot_butterfly!(f[2, 1:2], d_topo; positions=positions)
 
-f</code></pre><img src="718c06fa.png" alt="Example block output"/><p>Using the data from the tutorials, we can create a large image with any type of plot.</p><p>With so many plots at once, it&#39;s tempting to set a fixed resolution in your image to order the plots evenly (code below).</p><pre><code class="language-julia hljs">f = Figure(resolution=(2000, 2000))
+f</code></pre><img src="718c06fa.png" alt="Example block output"/><p>Using the data from the tutorials, we can create a large image with any type of plot.</p><p>With so many plots at once, it&#39;s tempting to set a fixed resolution in your image to order the plots evenly (code below).</p><pre><code class="language-julia hljs">f = Figure(resolution = (2000, 2000))
 
-plot_butterfly!(f[1, 1:3], d_topo; positions=positions)
+plot_butterfly!(f[1, 1:3], d_topo; positions = positions)
 
 pvals = DataFrame(
-    from=[0.1, 0.15],
-    to=[0.2, 0.5],
+    from = [0.1, 0.15],
+    to = [0.2, 0.5],
     # if coefname not specified, line should be black
-    coefname=[&quot;(Intercept)&quot;, &quot;category: face&quot;]
+    coefname = [&quot;(Intercept)&quot;, &quot;category: face&quot;],
 )
-plot_erp!(f[2, 1:2], results,
-    categorical_color=false,
-    categorical_group=false,
-    pvalue=pvals,
-    stderror=true)
-
+plot_erp!(
+    f[2, 1:2],
+    results,
+    categorical_color = false,
+    categorical_group = false,
+    pvalue = pvals,
+    stderror = true,
+)
 
 plot_designmatrix!(f[2, 3], designmatrix(uf))
 
-plot_topoplot!(f[3, 1], data[:, 150, 1]; positions=positions)
-plot_topoplotseries!(f[4, 1:3], d_topo, 0.1; positions=positions, mapping=(; label=:channel))
+plot_topoplot!(f[3, 1], data[:, 150, 1]; positions = positions)
+plot_topoplotseries!(
+    f[4, 1:3],
+    d_topo,
+    0.1;
+    positions = positions,
+    mapping = (; label = :channel),
+)
 
 res_effects = effects(Dict(:continuous =&gt; -5:0.5:5), uf_deconv)
 
-plot_erp!(f[2, 4:5], res_effects; categorical_color=false, categorical_group=true,
-    mapping=(; y=:yhat, color=:continuous, group=:continuous),
-    legend=(; nbanks=2),
-    layout=(; show_legend=true, legend_position=:right))
+plot_erp!(
+    f[2, 4:5],
+    res_effects;
+    categorical_color = false,
+    categorical_group = true,
+    mapping = (; y = :yhat, color = :continuous, group = :continuous),
+    legend = (; nbanks = 2),
+    layout = (; show_legend = true, legend_position = :right),
+)
 
-plot_parallelcoordinates(f[3, 2:3], uf_5chan; mapping=(; color=:coefname),
-    layout=(; legend_position=:bottom))
+plot_parallelcoordinates(
+    f[3, 2:3],
+    uf_5chan;
+    mapping = (; color = :coefname),
+    layout = (; legend_position = :right),
+)
 
-plot_erpimage!(f[1, 4:5], times, dat_e; sortvalues=evts.Δlatency)
-plot_circulareegtopoplot!(f[3:4, 4:5], d_topo[in.(d_topo.time, Ref(-0.3:0.1:0.5)), :];
-    positions=positions, predictor=:time, predictor_bounds=[-0.3, 0.5])
+plot_erpimage!(f[1, 4:5], times, d_singletrial)
+plot_circulareegtopoplot!(
+    f[3:4, 4:5],
+    d_topo[in.(d_topo.time, Ref(-0.3:0.1:0.5)), :];
+    positions = positions,
+    predictor = :time,
+    predictor_bounds = [-0.3, 0.5],
+)
 
-f</code></pre><img src="65a21df3.png" alt="Example block output"/><pre><code class="language-julia hljs">f = Figure(resolution=(1200, 1400))
+f</code></pre><img src="0f6eca99.png" alt="Example block output"/><pre><code class="language-julia hljs">f = Figure(resolution = (1200, 1400))
 ga = f[1, 1]
 gc = f[2, 1]
 ge = f[3, 1]
@@ -67,55 +90,84 @@ gf = f[3, 2]
 gh = f[4, 2]
 
 d_topo, pos = example_data(&quot;TopoPlots.jl&quot;)
-uf = example_data(&quot;UnfoldLinearModel&quot;)
-results = coeftable(uf)
-uf_5chan = example_data(&quot;UnfoldLinearModelMultiChannel&quot;)
-d_singletrial, _ = UnfoldSim.predef_eeg(; return_epoched=true)
-times = -0.099609375:0.001953125:1.0
 data, positions = TopoPlots.example_data()
-df = UnfoldMakie.eeg_matrix_to_dataframe(data[:,:,1], string.(1:length(positions)));
-raw_ch_names = [&quot;FP1&quot;, &quot;F3&quot;, &quot;F7&quot;, &quot;FC3&quot;, &quot;C3&quot;, &quot;C5&quot;, &quot;P3&quot;, &quot;P7&quot;, &quot;P9&quot;, &quot;PO7&quot;,
-&quot;PO3&quot;, &quot;O1&quot;, &quot;Oz&quot;, &quot;Pz&quot;, &quot;CPz&quot;, &quot;FP2&quot;, &quot;Fz&quot;, &quot;F4&quot;, &quot;F8&quot;, &quot;FC4&quot;, &quot;FCz&quot;, &quot;Cz&quot;,
-&quot;C4&quot;, &quot;C6&quot;, &quot;P4&quot;, &quot;P8&quot;, &quot;P10&quot;, &quot;PO8&quot;, &quot;PO4&quot;, &quot;O2&quot;]
+df = UnfoldMakie.eeg_matrix_to_dataframe(data[:, :, 1], string.(1:length(positions)))
+raw_ch_names = [
+    &quot;FP1&quot;, &quot;F3&quot;, &quot;F7&quot;, &quot;FC3&quot;, &quot;C3&quot;, &quot;C5&quot;, &quot;P3&quot;, &quot;P7&quot;, &quot;P9&quot;, &quot;PO7&quot;, &quot;PO3&quot;, &quot;O1&quot;,
+    &quot;Oz&quot;, &quot;Pz&quot;, &quot;CPz&quot;, &quot;FP2&quot;, &quot;Fz&quot;, &quot;F4&quot;, &quot;F8&quot;, &quot;FC4&quot;, &quot;FCz&quot;, &quot;Cz&quot;,
+    &quot;C4&quot;, &quot;C6&quot;, &quot;P4&quot;, &quot;P8&quot;, &quot;P10&quot;, &quot;PO8&quot;, &quot;PO4&quot;, &quot;O2&quot;,
+]
 
 m = example_data(&quot;UnfoldLinearModel&quot;)
 results = coeftable(m)
-res_effects = effects(Dict(:continuous =&gt; -5:0.5:5), m);
 
-plot_erp!(ga, results; :stderror=&gt;true)
-plot_butterfly!(gb, d_topo; positions=pos,
-    topomarkersize = 10, topoheigth = 0.4, topowidth = 0.4,)
-    hlines!(0, color = :gray, linewidth = 1)
-    vlines!(0, color = :gray, linewidth = 1)
-plot_topoplot!(gc, data[:,340,1]; positions = positions)
-plot_topoplotseries!(gd, df, 80; positions=positions, visual=(label_scatter=false,),
-    layout = (; use_colorbar=true))
-plot_erpgrid!(ge, data[:, :, 1], positions)
+results.coefname = replace(results.coefname,
+    &quot;condition: face&quot; =&gt; &quot;face&quot;,
+    &quot;(Intercept)&quot; =&gt; &quot;car&quot;)
+results = filter(row -&gt; row.coefname != &quot;continuous&quot;, results)
+
+plot_erp!(ga, results; :stderror =&gt; true,
+    mapping = (; color = :coefname =&gt; &quot;Conditions&quot;))
+hlines!(0, color = :gray, linewidth = 1)
+vlines!(0, color = :gray, linewidth = 1)
+plot_butterfly!(
+    gb,
+    d_topo;
+    positions = pos,
+    topomarkersize = 10,
+    topoheigth = 0.4,
+    topowidth = 0.4,
+)
+hlines!(0, color = :gray, linewidth = 1)
+vlines!(0, color = :gray, linewidth = 1)
+plot_topoplot!(
+    gc,
+    data[:, 340, 1];
+    positions = positions,
+    axis = (; xlabel = &quot;[340 ms]&quot;),
+)
+
+plot_topoplotseries!(gd, df, 80;
+    positions = positions,
+    visual = (label_scatter = false,),
+    layout = (; use_colorbar = true),
+)
+
+ax = gd[1, 1] = Axis(f)
+text!(ax, 0, 0, text = &quot;Time [ms]&quot;,
+    align = (:center, :center), offset = (-20, -80))
+hidespines!(ax) # delete unnecessary spines (lines)
+hidedecorations!(ax, label = false)
+
+plot_erpgrid!(ge, data[:, :, 1], positions;
+    axis = (; ylabel = &quot;µV&quot;, ylim = [-0.05, 0.6], xlim = [-0.04, 1]),
+)
 
 dat_e, evts, times = example_data(&quot;sort_data&quot;)
-plot_erpimage!(gf, times, dat_e; sortvalues=evts.Δlatency)
-plot_channelimage!(gg, data[:, :, 1], positions[1:30], raw_ch_names; )
-
-r1, positions = example_data();
+plot_erpimage!(gf, times, dat_e; sortvalues = evts.Δlatency)
+plot_channelimage!(gg, data[:, :, 1], positions[1:30], raw_ch_names;)
+r1, positions = example_data()
 r2 = deepcopy(r1)
 r2.coefname .= &quot;B&quot; # create a second category
-r2.estimate .+= rand(length(r2.estimate))*0.1
-results_plot = vcat(r1, r2);
+r2.estimate .+= rand(length(r2.estimate)) * 0.1
+results_plot = vcat(r1, r2)
 plot_parallelcoordinates(
     gh,
     subset(results_plot, :channel =&gt; x -&gt; x .&lt; 8, :time =&gt; x -&gt; x .&lt; 0);
     mapping = (; color = :coefname),
-    normalize = :minmax, ax_labels = [&quot;FP1&quot;, &quot;F3&quot;, &quot;F7&quot;, &quot;FC3&quot;, &quot;C3&quot;, &quot;C5&quot;, &quot;P3&quot;, &quot;P7&quot;]
+    normalize = :minmax,
+    ax_labels = [&quot;FP1&quot;, &quot;F3&quot;, &quot;F7&quot;, &quot;FC3&quot;, &quot;C3&quot;, &quot;C5&quot;, &quot;P3&quot;, &quot;P7&quot;],
 )
 
-
-for (label, layout) in zip([&quot;A&quot;, &quot;B&quot;, &quot;C&quot;, &quot;D&quot;, &quot;E&quot;, &quot;F&quot;, &quot;G&quot;, &quot;H&quot;], [ga, gb, gc, gd, ge, gf, gg, gh])
-    Label(layout[1, 1, TopLeft()], label,
-        fontsize=26,
-        font=:bold,
-        padding=(0, 5, 5, 0),
-        halign=:right)
+for (label, layout) in
+    zip([&quot;A&quot;, &quot;B&quot;, &quot;C&quot;, &quot;D&quot;, &quot;E&quot;, &quot;F&quot;, &quot;G&quot;, &quot;H&quot;], [ga, gb, gc, gd, ge, gf, gg, gh])
+    Label(
+        layout[1, 1, TopLeft()],
+        label,
+        fontsize = 26,
+        font = :bold,
+        padding = (20, 20, 22, 0), #(20, 70, 22, 0),
+        halign = :right,
+    )
 end
-f
-save(&quot;./complex_plot.png&quot;, f)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">CairoMakie.Screen{IMAGE}
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../hide_deco/">« Hide Axis Spines and Decorations</a><a class="docs-footer-nextpage" href="../show_oob_labels/">Designmatrix: Show out of Bounds Label »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.1 on <span class="colophon-date" title="Tuesday 19 December 2023 12:41">Tuesday 19 December 2023</span>. Using Julia version 1.9.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+f</code></pre><img src="9f963ffa.png" alt="Example block output"/></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../hide_deco/">« Hide Axis Spines and Decorations</a><a class="docs-footer-nextpage" href="../show_oob_labels/">Designmatrix: Show out of Bounds Label »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.1 on <span class="colophon-date" title="Wednesday 20 December 2023 13:35">Wednesday 20 December 2023</span>. Using Julia version 1.9.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
